--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
           <a href="#experience">Experience</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a
-            class="pill"
-            href="https://github.com/rishabhsxngh"
-            target="_blank"
-            rel="noreferrer"
-            >GitHub</a
-          >
+          <a class="pill" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
         </nav>
       </div>
     </header>
@@ -42,53 +36,33 @@
       <section class="hero">
         <div class="container hero-inner">
           <div>
-            <p class="kicker">
-              Data Analyst • ETL Pipelines • Analytics Engineering
-            </p>
+            <p class="kicker">Data Analyst • ETL Pipelines • Analytics Engineering</p>
 
+            <!-- LOOPING TYPING HEADER -->
             <h1 class="headline">
               What's up! I'm Rishabh Singh, and I
-              <span class="accent">build data pipelines</span>
-              and analytics tools for enterprise AI and finance.
+              <span class="accent">
+                <span id="headlineType"></span><span class="caret" aria-hidden="true"></span>
+              </span>
+              for enterprise AI and finance.
             </h1>
 
-            <!-- TYPING INTRO -->
-            <p class="type-line">
-              <span id="typewriter"></span
-              ><span class="caret" aria-hidden="true"></span>
-            </p>
-
             <p class="subhead">
-              Data Science student at the University of Michigan with experience
-              building ETL pipelines, automating analytics workflows, and
-              delivering insights from large-scale datasets. Currently working
-              on sports analytics tools and portfolio modeling.
+              Data Science student at the University of Michigan with experience building ETL pipelines,
+              automating analytics workflows, and delivering insights from large-scale datasets.
+              Currently working on sports analytics tools and portfolio modeling.
             </p>
 
             <div class="cta-row">
               <a class="btn primary" href="#projects">View projects</a>
-              <a
-                class="btn"
-                href="https://github.com/rishabhsxngh"
-                target="_blank"
-                rel="noreferrer"
-                >GitHub</a
-              >
-              <a
-                class="btn"
-                href="https://www.linkedin.com/in/rishabhsingh2027"
-                target="_blank"
-                rel="noreferrer"
-                >LinkedIn</a
-              >
+              <a class="btn" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
+              <a class="btn" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">LinkedIn</a>
             </div>
 
             <div class="meta">
               <div class="meta-item">
                 <span class="meta-label">Current Role</span>
-                <span class="meta-value"
-                  >Data Analyst @ AfterQuery Experts</span
-                >
+                <span class="meta-value">Data Analyst @ AfterQuery Experts</span>
               </div>
               <div class="meta-item">
                 <span class="meta-label">Stack</span>
@@ -105,20 +79,14 @@
               <div class="dot green"></div>
             </div>
 
+            <!-- HEADSHOT -->
             <div class="headshot-wrap">
-              <img
-                class="headshot"
-                src="IMG_6308.jpg"
-                alt="Rishabh Singh headshot"
-              />
+              <img class="headshot" src="IMG_6308.jpg" alt="Rishabh Singh headshot" />
             </div>
 
+            <!-- UNIVERSITY OF MICHIGAN LOGO -->
             <div style="text-align: center; padding: 12px 0 8px;">
-              <img
-                src="umich-logo.png"
-                alt="University of Michigan"
-                style="height: 45px; opacity: 0.85;"
-              />
+              <img src="umich-logo.png" alt="University of Michigan" style="height: 45px; opacity: 0.85;" />
             </div>
 
             <pre class="code">
@@ -142,19 +110,254 @@
         <div class="container">
           <div class="section-head">
             <h2>Experience</h2>
-            <p>
-              Data analyst roles focused on ETL, automation, and enterprise
-              analytics.
-            </p>
+            <p>Data analyst roles focused on ETL, automation, and enterprise analytics.</p>
           </div>
 
           <div class="grid">
-            <!-- cards unchanged -->
+            <article class="card">
+              <div class="card-top">
+                <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+                  <img src="afterquery_experts_logo.jpeg" alt="AfterQuery Experts" style="height: 32px; width: 32px; object-fit: contain;" />
+                  <h3 style="margin: 0;">AfterQuery Experts</h3>
+                </div>
+                <p class="tag-row">
+                  <span class="tag">Data Analyst</span>
+                  <span class="tag">Aug 2025 - Present</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Built Python ETL pipelines processing 100k+ weekly records for enterprise AI teams at Berkeley and Stanford.
+                Developed internal APIs for dataset delivery and improved pipeline runtime by ~25% through optimized validation logic.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  LinkedIn →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+                  <img src="1631376160671.jpeg" alt="Academic Analytics" style="height: 32px; width: 32px; object-fit: contain;" />
+                  <h3 style="margin: 0;">Academic Analytics</h3>
+                </div>
+                <p class="tag-row">
+                  <span class="tag">Data Analyst</span>
+                  <span class="tag">Jun - Sep 2025</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Analyzed $10B+ in vendor spend data across 135+ universities using Python.
+                Automated reporting pipelines, reducing processing time by ~35% and saving 10+ hours/week.
+                Extracted and analyzed SEC filings in R for vendor financial health assessment.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  LinkedIn →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+                  <img src="images__3_.jpeg" alt="The Coder School" style="height: 32px; width: 32px; object-fit: contain; border-radius: 50%;" />
+                  <h3 style="margin: 0;">The Coder School</h3>
+                </div>
+                <p class="tag-row">
+                  <span class="tag">Code Coach</span>
+                  <span class="tag">May - Aug 2024</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Led curriculum development and technical outreach with high schools in NC and CA, driving ~25% revenue growth.
+                Taught C++ and web development to 20-30 students per cohort through project-based learning.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  LinkedIn →
+                </a>
+              </div>
+            </article>
           </div>
         </div>
       </section>
 
-      <!-- PROJECTS / ABOUT / CONTACT unchanged -->
+      <!-- PROJECTS -->
+      <section id="projects" class="section alt">
+        <div class="container">
+          <div class="section-head">
+            <h2>Projects</h2>
+            <p>Analytics tools, dashboards, and modeling work.</p>
+          </div>
+
+          <div class="grid">
+            <article class="card">
+              <div class="card-top">
+                <h3>NBA Prospect Evaluation Tool</h3>
+                <p class="tag-row">
+                  <span class="tag">R</span>
+                  <span class="tag">Shiny</span>
+                  <span class="tag">Data Viz</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Interactive Shiny app for exploring shot quality, shot distribution, and efficiency by zone.
+                Designed for quick scouting-style comparisons and clear storytelling.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://github.com/rishabhsxngh/nba-prospect-evaluation-tool" target="_blank" rel="noreferrer">
+                  Code →
+                </a>
+                <a class="link" href="#" aria-disabled="true" title="Add your deployed Shiny link here">
+                  Live demo →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <h3>NFL Penalty Margin & Win Analysis</h3>
+                <p class="tag-row">
+                  <span class="tag">R</span>
+                  <span class="tag">Shiny</span>
+                  <span class="tag">Sports Analytics</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Interactive R Shiny dashboard analyzing NFL play-by-play data (2018-2023).
+                Features penalty margin vs win % correlation, z-score outlier detection, and home/away splits across all teams.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://github.com/rishabhsxngh/NFL-Analysis" target="_blank" rel="noreferrer">
+                  Code →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <h3>Portfolio Value Creation Dashboard</h3>
+                <p class="tag-row">
+                  <span class="tag">Python</span>
+                  <span class="tag">Finance</span>
+                  <span class="tag">Modeling</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Built portfolio analytics dashboard modeling revenue, margin, and EBITDA drivers across product lines.
+                Conducted pricing and cost sensitivity analyses with investor-ready executive summaries.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">
+                  Code →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <h3>Good Karma Engineering</h3>
+                <p class="tag-row">
+                  <span class="tag">Non-Profit</span>
+                  <span class="tag">3D Printing</span>
+                  <span class="tag">Leadership</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Founded non-profit focused on 3D printing prosthetic limbs.
+                Shipped 50+ fully functional arms and legs to people across the US, England, and India.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  Learn more →
+                </a>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- ABOUT -->
+      <section id="about" class="section">
+        <div class="container">
+          <div class="section-head">
+            <h2>About</h2>
+            <p>Background, skills, and what I'm looking for.</p>
+          </div>
+
+          <div class="two-col">
+            <div class="panel">
+              <h3>What I do</h3>
+              <p>
+                I build data pipelines and analytics tools that support real decisions.
+                My work focuses on ETL automation, data quality, and turning messy datasets into clean, actionable insights.
+              </p>
+              <ul class="bullets">
+                <li>Python-based ETL pipelines and data workflows</li>
+                <li>Analytics automation and reporting infrastructure</li>
+                <li>Sports analytics and interactive dashboards (R Shiny)</li>
+                <li>Financial modeling and portfolio analytics</li>
+              </ul>
+            </div>
+
+            <div class="panel">
+              <h3>Technical Skills</h3>
+              <p>
+                Core competencies across data engineering, analytics, and software development.
+              </p>
+              <div class="small-grid">
+                <div class="mini">
+                  <span class="mini-label">Languages</span>
+                  <span class="mini-value">Python, R, SQL, C/C++</span>
+                </div>
+                <div class="mini">
+                  <span class="mini-label">Tools</span>
+                  <span class="mini-value">Git, Pandas, NumPy, PyTorch</span>
+                </div>
+                <div class="mini">
+                  <span class="mini-label">Web</span>
+                  <span class="mini-value">HTML, CSS, JavaScript, ReactJS</span>
+                </div>
+                <div class="mini">
+                  <span class="mini-label">Education</span>
+                  <span class="mini-value">UMich Data Science (3.71 GPA)</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel" style="margin-top: 14px;">
+            <h3>What I'm looking for</h3>
+            <p>
+              Internships and full-time roles in data science, analytics engineering, or software development.
+              I want to work on teams that ship data products and care about data quality, clean code, and measurable impact.
+            </p>
+            <p style="margin-bottom: 0;">
+              <strong>Interested in:</strong> Data Science, Analytics Engineering, Software Engineering<br />
+              <strong>Domains:</strong> Sports tech, fintech, enterprise SaaS, AI/ML infrastructure<br />
+              <strong>Based:</strong> Ann Arbor, MI / Long Island, NY
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- CONTACT -->
+      <section id="contact" class="section alt">
+        <div class="container">
+          <div class="section-head">
+            <h2>Contact</h2>
+            <p>Best way to reach me: email or LinkedIn.</p>
+          </div>
+
+          <div class="contact-row">
+            <a class="btn primary" href="mailto:rishps@umich.edu">Email me</a>
+            <a class="btn" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
+            <a class="btn" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">LinkedIn</a>
+          </div>
+        </div>
+      </section>
 
       <footer class="footer">
         <div class="container footer-inner">
@@ -170,51 +373,54 @@
     </main>
 
     <script>
-      document.getElementById("year").textContent =
-        new Date().getFullYear();
+      document.getElementById("year").textContent = new Date().getFullYear();
 
-      const el = document.getElementById("typewriter");
+      // Headline typing loop
+      const el = document.getElementById("headlineType");
 
-      const lines = [
-        "Hi, my name is Rishabh Singh.",
-        "I build ETL pipelines and analytics tools that turn messy data into decisions.",
-        "I work primarily in Python, R, and SQL, with a strong focus on data quality.",
-        "Right now I’m building sports analytics dashboards and portfolio models.",
-        "If you’re hiring for data science or analytics engineering, let’s talk."
+      // These are "header-safe" fragments (they read cleanly inside your H1)
+      const phrases = [
+        "build data pipelines",
+        "build analytics tools",
+        "ship ETL systems",
+        "automate reporting workflows",
+        "turn messy data into decisions"
       ];
 
-      const typingSpeed = 35;
-      const deletingSpeed = 20;
-      const pauseAfterTyped = 1100;
-      const pauseAfterDeleted = 250;
+      const typingSpeed = 38;       // ms per character while typing
+      const deletingSpeed = 22;     // ms per character while deleting
+      const pauseAfterTyped = 950;  // pause after phrase typed
+      const pauseAfterDeleted = 220;
 
-      let lineIndex = 0;
+      let phraseIndex = 0;
       let charIndex = 0;
       let deleting = false;
 
       function tick() {
-        const current = lines[lineIndex];
+        const current = phrases[phraseIndex];
 
         if (!deleting) {
-          charIndex++;
+          charIndex += 1;
           el.textContent = current.slice(0, charIndex);
 
-          if (charIndex === current.length) {
+          if (charIndex >= current.length) {
             deleting = true;
             setTimeout(tick, pauseAfterTyped);
             return;
           }
+
           setTimeout(tick, typingSpeed);
         } else {
-          charIndex--;
-          el.textContent = current.slice(0, charIndex);
+          charIndex -= 1;
+          el.textContent = current.slice(0, Math.max(0, charIndex));
 
-          if (charIndex === 0) {
+          if (charIndex <= 0) {
             deleting = false;
-            lineIndex = (lineIndex + 1) % lines.length;
+            phraseIndex = (phraseIndex + 1) % phrases.length;
             setTimeout(tick, pauseAfterDeleted);
             return;
           }
+
           setTimeout(tick, deletingSpeed);
         }
       }
@@ -223,3 +429,4 @@
     </script>
   </body>
 </html>
+
