--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <div class="container">
           <div class="section-head">
             <h2>Contact</h2>
-            <p>Best way to reach me: email or LinkedIn.</p>
+            <p>Reach me at rishps@umich.edu or LinkedIn.</p>
           </div>
 
           <div class="contact-row">
