--- a/index.html
+++ b/index.html
@@ -89,14 +89,32 @@
               <img src="umich-logo.png" alt="University of Michigan" style="height: 45px; opacity: 0.85;" />
             </div>
 
-            <pre class="code">
-<span class="code-muted"># recently completed</span>
-<span class="code-strong">NFL Penalty Analytics Dashboard</span>
+            <!-- TL;DR (replaces project showcase) -->
+            <div class="tldr-card">
+              <div class="tldr-label">TL;DR</div>
+              <p>
+                Data Science student focused on ETL pipelines and analytics engineering.
+                Build production-grade data workflows in Python, R, and SQL.
+                Experience with large-scale datasets, automation, and decision-focused analytics.
+              </p>
+              <p class="tldr-intent">
+                Seeking 2026 internships in data science, analytics engineering, or software engineering.
+              </p>
 
-- R Shiny application
-- 2018-2023 play-by-play data
-- penalty margin vs win % analysis
-- interactive team comparisons</pre>
+              <!-- VERY VISIBLE STACK -->
+              <div class="stack-card">
+                <div class="stack-label">Core Stack</div>
+                <div class="stack-chips">
+                  <span class="chip">Python</span>
+                  <span class="chip">R</span>
+                  <span class="chip">SQL</span>
+                  <span class="chip">C++</span>
+                  <span class="chip">Git</span>
+                  <span class="chip">Pandas</span>
+                  <span class="chip">Shiny</span>
+                </div>
+              </div>
+            </div>
 
             <div class="hero-card-bottom">
               <a class="mini-link" href="#projects">See projects ↓</a>
@@ -348,7 +366,7 @@
         <div class="container">
           <div class="section-head">
             <h2>Contact</h2>
-            <p>Reach me at rishps@umich.edu or LinkedIn.</p>
+            <p>Best way to reach me: email or LinkedIn.</p>
           </div>
 
           <div class="contact-row">
@@ -378,7 +396,7 @@
       // Headline typing loop
       const el = document.getElementById("headlineType");
 
-      // These are "header-safe" fragments (they read cleanly inside your H1)
+      // Header-safe phrases (read cleanly inside your H1)
       const phrases = [
         "build data pipelines",
         "build analytics tools",
@@ -387,9 +405,9 @@
         "turn messy data into decisions"
       ];
 
-      const typingSpeed = 80;       // ms per character while typing
-      const deletingSpeed = 40;     // ms per character while deleting
-      const pauseAfterTyped = 1100;  // pause after phrase typed
+      const typingSpeed = 38;
+      const deletingSpeed = 22;
+      const pauseAfterTyped = 950;
       const pauseAfterDeleted = 220;
 
       let phraseIndex = 0;
@@ -429,4 +447,3 @@
     </script>
   </body>
 </html>
-
