--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
               for enterprise AI and finance.
             </h1>
 
-            <p class="subhead">
-              Data Science student at the University of Michigan with experience building ETL pipelines,
-              automating analytics workflows, and delivering insights from large-scale datasets.
-              Currently working on sports analytics tools and portfolio modeling.
-            </p>
+            <ul class="proof">
+  <li><strong>100k+ records/week</strong> processed via Python ETL pipelines (AfterQuery Experts)</li>
+  <li><strong>~25% faster</strong> pipeline runtime through optimized validation and batching</li>
+  <li><strong>$10B+ vendor spend</strong> analyzed across <strong>135+</strong> universities (Academic Analytics)</li>
+</ul>
+
 
             <div class="cta-row">
               <a class="btn primary" href="#projects">View projects</a>
