--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 
             <!-- LOOPING TYPING HEADER -->
             <h1 class="headline">
-              What's up! I'm Rishabh Singh, and I
-              <span class="accent">
-                <span id="headlineType"></span><span class="caret" aria-hidden="true"></span>
-              </span>
-              for enterprise AI and finance.
-            </h1>
+  What's up! I'm Rishabh Singh, and I
+  <span class="accent typewrap">
+    <span id="headlineType"></span><span class="caret"></span>
+  </span>
+  for enterprise AI and finance.
+</h1>
+
 
             <ul class="proof">
   <li><strong>100k+ records/week</strong> processed via Python ETL pipelines (AfterQuery Experts)</li>
