--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 Experience with large-scale datasets, automation, and decision-focused analytics.
               </p>
               <p class="tldr-intent">
-                Seeking 2026 internships in data science, analytics engineering, or software engineering.
+                Seeking 2026 Summer Internships in Data Analytics or Software Engineering.
               </p>
 
               <!-- VERY VISIBLE STACK -->
