--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         "build data pipelines",
         "build analytics tools",
         "ship ETL systems",
-        "automate reporting workflows",
+        "automate reporting",
         "turn data into decisions"
       ];
 
