--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <span class="accent typewrap">
                 <span id="headlineType" class="fade-swap"></span>
               </span>
-              for enterprise AI and finance.
+              for data-driven teams.
             </h1>
 
             <!-- Recruiter-facing role signal -->
