--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         "build analytics tools",
         "ship ETL systems",
         "automate reporting",
-        "turn data into decisions"
+        "turn data into action"
       ];
 
       const holdMs = 3200; // longer hold
